k8s/clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-clusterip
spec:
  selector:
    app: myapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
