k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "myapp-ingress"
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "ryan"
spec:
  backend:
    serviceName: my-nodeport
    servicePort: 32000
